fix login animation overflow && add animations to register page && simplify methods

--- a/client/src/assets/styles/login-register_light.css
+++ b/client/src/assets/styles/login-register_light.css
@@ -8,6 +8,7 @@
   position: absolute;
   width:100%;
   /* height: 100%; Enable or disable? */
+  overflow-x: hidden;
 }
 
 #main_div {
